derive-ex-tests/tests/compile_fail/compare_op/partial_eq_by_not_fn.rs
use derive_ex::derive_ex;

#[derive_ex(PartialEq)]
struct X {
    #[partial_eq(by = ())]
    x: u8,
}

fn main() {}
