derive-ex-tests/tests/compile_fail/compare_op/partial_eq_by_not_fn.stderr
error[E0277]: expected a `Fn(&u8, &u8)` closure, found `()`
 --> tests/compile_fail/compare_op/partial_eq_by_not_fn.rs:5:23
  |
5 |     #[partial_eq(by = ())]
  |                       ^^ expected an `Fn(&u8, &u8)` closure, found `()`
6 |     x: u8,
  |     - required by a bound introduced by this call
  |
  = help: the trait `for<'a, 'b> Fn(&'a u8, &'b u8)` is not implemented for `()`
note: required by a bound in `__eq__x`
 --> tests/compile_fail/compare_op/partial_eq_by_not_fn.rs:3:1
  |
3 | #[derive_ex(PartialEq)]
  | ^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `__eq__x`
...
6 |     x: u8,
  |     - required by a bound in this function
  = note: this error originates in the attribute macro `derive_ex` (in Nightly builds, run with -Z macro-backtrace for more info)
